--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -1,13 +1,24 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>welcome</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
+</ion-content>
+
 <ion-tabs>
-  <ion-tab-bar slot="bottom" color="dark">
+
+  <ion-tab-bar slot="bottom">
 
     <ion-tab-button tab="feed">
-      <ion-icon name="layout"></ion-icon>
+      <ion-icon name="layers"></ion-icon>
       <ion-label>Feed</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="messages">
-      <ion-icon name="app"></ion-icon>
+      <ion-icon name="send"></ion-icon>
       <ion-label>Messages</ion-label>
     </ion-tab-button>
 
@@ -27,4 +38,5 @@
     </ion-tab-button>
 
   </ion-tab-bar>
+
 </ion-tabs>
