--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,15 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom" color="dark">
+  <!-- <ion-tab-bar slot="bottom" color="dark"> -->
+
+  <ion-tab-bar slot="bottom">
 
     <ion-tab-button tab="feed">
-      <ion-icon name="layout"></ion-icon>
+      <ion-icon name="layers-outline"></ion-icon>
       <ion-label>Feed</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="messages">
-      <ion-icon name="app"></ion-icon>
+      <ion-icon name="navigate-circle-outline"></ion-icon>
       <ion-label>Messages</ion-label>
     </ion-tab-button>
 
