--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -1,42 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>welcome</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content padding="true">
+    <app-slides></app-slides>
 </ion-content>
-
-<ion-tabs>
-
-  <ion-tab-bar slot="bottom">
-
-    <ion-tab-button tab="feed">
-      <ion-icon name="layers"></ion-icon>
-      <ion-label>Feed</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="messages">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Messages</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="notifications">
-      <ion-icon name="notifications"></ion-icon>
-      <ion-label>Notifications</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="schedule">
-      <ion-icon name="time"></ion-icon>
-      <ion-label>Schedule</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="settings">
-      <ion-icon name="cog"></ion-icon>
-      <ion-label>Settings</ion-label>
-    </ion-tab-button>
-
-  </ion-tab-bar>
-
-</ion-tabs>
