--- a/src/app/components/slides/slides.component.html
+++ b/src/app/components/slides/slides.component.html
@@ -1,7 +1,7 @@
-<ion-slides pager="true" [options]="slideOpts">
+<ion-slides pager="true" [options]="slideOpts" color="mango">
     <ion-slide>
       <app-logo></app-logo>
-      <h2>Welcome <br>To<br> Malaysia Airlines</h2>
+      <h3>Welcome <br>To<br> Malaysia Airlines</h3>
       <p>-</p>
     </ion-slide>
 
