--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -1,1 +1,3 @@
-<ion-button expand="block" share="round" color="mango" (click)="navigateToLogin()">Start</ion-button>
+<ion-button  expand="block" shape="round"  fill="outline" color="mango" (click)="navigateToLogin()">
+    <ion-icon name="finger-print-outline"></ion-icon>
+</ion-button>
