--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -27,7 +27,11 @@
         </ion-item>
       </ion-list>
       
-      <ion-button expand="block" share="round" color="success">Login</ion-button>
+      <ion-button expand="block" share="round" color="success" (click)="login()">Login</ion-button>
 
     </form>
+
+    <br>
+    <!-- <ion-button shape="round" share="round" color="danger" (click)="login1()">SSO/fingerprintscanner</ion-button> -->
+
   </ion-content>
